##########################
# Setup.py Configuration #
##########################
[metadata]
name = structuregraph_helpers
version = 0.0.10-dev
description = Utilities for working with structure graphs
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/kjappelbaum/structuregraph-helpers
download_url = https://github.com/kjappelbaum/structuregraph-helpers/releases
project_urls =
    Bug Tracker = https://github.com/kjappelbaum/structuregraph-helpers/issues
    Source Code = https://github.com/kjappelbaum/structuregraph-helpers

# Author information
author = Kevin M. Jablonka
author_email = mail@kjablonka.com
maintainer = Kevin M. Jablonka
maintainer_email = mail@kjablonka.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    materials
    pymatgen
    structuregraph
    graph
    crystallography

[options]
install_requires =
    pymatgen
    pyyaml
    loguru
    click

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
plotting = 
    plotly
lint = 
    isort
    black
    flake8
    pre-commit
    bumpversion
tests =
    pytest
    tox
    coverage
docs =
    sphinx
    sphinx_book_theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    sphinx_copybutton

[options.entry_points]
console_scripts =
     sgh.create_hash = structuregraph_helpers.cli:get_hash
     sgh.create_hashes = structuregraph_helpers.cli:get_hashes

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = structuregraph_helpers
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/structuregraph_helpers
    .tox/*/lib/python*/site-packages/structuregraph_helpers

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S101 # assert
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203  # whitespace before ':'
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
    */_hasher.py
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    structuregraph_helpers
    tests
per-file-ignores =
    tests/*.py:DAR101, D205, D100, DAR101, DAR201, D209, D103